# drs-appointment-back

./: README.md  docker-compose.yml
auth-service/: .dockerignore  Dockerfile  pyproject.toml
auth-service/app/: main.py
auth-service/app/api/: routes.py
auth-service/app/core/: config.py  kafka.py  security.py
auth-service/app/domain/: services.py
auth-service/app/infrastructure/db/: models.py  repository.py  session.py
auth-service/app/schemas/: auth.py
notification-service/: Dockerfile  pyproject.toml
notification-service/app/: main.py
notification-service/app/consumers/: email_verification.py
notification-service/app/core/: config.py  kafka.py  smtp.py
notification-service/app/schemas/: events.py
notification-service/app/templates/: verify_email.html
