[project]
name = "notification-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "aiokafka (>=0.13.0,<0.14.0)",
    "aiosmtplib (>=5.0.0,<6.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
